force-app/main/default/objects/SalesforceWrtsActivity__x/SalesforceWrtsActivity__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceWrtsActivity</externalName>
    <label>Attività Salesforce</label>
    <pluralLabel>Attività Salesforce</pluralLabel>
</CustomObject>