force-app/main/default/objects/SalesforceWrtsActivity__x/fields/Acc_Name__c.field-meta.xml
<CustomField>
    <fullName>Acc_Name__c</fullName>
    <description>Acc_Name</description>
    <externalDeveloperName>Acc_Name</externalDeveloperName>
    <label>Account Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>