force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ActivityDurationC__c.field-meta.xml
<CustomField>
    <fullName>ActivityDurationC__c</fullName>
    <description>ActivityDurationC</description>
    <externalDeveloperName>ActivityDurationC</externalDeveloperName>
    <label>ActivityDurationC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>