force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ActivityEndTimeC__c.field-meta.xml
<CustomField>
    <fullName>ActivityEndTimeC__c</fullName>
    <description>ActivityEndTimeC</description>
    <externalDeveloperName>ActivityEndTimeC</externalDeveloperName>
    <label>Fine Attività</label>
    <type>DateTime</type>
</CustomField>