force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ActivityOutcomeC__c.field-meta.xml
<CustomField>
    <fullName>ActivityOutcomeC__c</fullName>
    <description>ActivityOutcomeC</description>
    <externalDeveloperName>ActivityOutcomeC</externalDeveloperName>
    <label>ActivityOutcomeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>