force-app/main/default/objects/SalesforceWrtsActivity__x/fields/AppointmentCompetenceC__c.field-meta.xml
<CustomField>
    <fullName>AppointmentCompetenceC__c</fullName>
    <description>AppointmentCompetenceC</description>
    <externalDeveloperName>AppointmentCompetenceC</externalDeveloperName>
    <label>Competenza Appuntamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>