force-app/main/default/objects/SalesforceWrtsActivity__x/fields/AppointmentDateC__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDateC__c</fullName>
    <description>AppointmentDateC</description>
    <externalDeveloperName>AppointmentDateC</externalDeveloperName>
    <label>AppointmentDateC</label>
    <type>DateTime</type>
</CustomField>