force-app/main/default/objects/SalesforceWrtsActivity__x/fields/AppointmentResultCodeC__c.field-meta.xml
<CustomField>
    <fullName>AppointmentResultCodeC__c</fullName>
    <description>AppointmentResultCodeC</description>
    <externalDeveloperName>AppointmentResultCodeC</externalDeveloperName>
    <label>AppointmentResultCodeC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>