force-app/main/default/objects/SalesforceWrtsActivity__x/fields/AppointmentTimeSlotToConfirmC__c.field-meta.xml
<CustomField>
    <fullName>AppointmentTimeSlotToConfirmC__c</fullName>
    <description>AppointmentTimeSlotToConfirmC</description>
    <externalDeveloperName>AppointmentTimeSlotToConfirmC</externalDeveloperName>
    <label>Fascia appuntamento da confermare</label>
    <length>11</length>
    <type>Text</type>
</CustomField>