force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ApprovedC__c.field-meta.xml
<CustomField>
    <fullName>ApprovedC__c</fullName>
    <description>ApprovedC</description>
    <externalDeveloperName>ApprovedC</externalDeveloperName>
    <label>ApprovedC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>