force-app/main/default/objects/SalesforceWrtsActivity__x/fields/AssociationStatuteC__c.field-meta.xml
<CustomField>
    <fullName>AssociationStatuteC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AssociationStatuteC</description>
    <externalDeveloperName>AssociationStatuteC</externalDeveloperName>
    <label>Statuto dell&apos;ass./Atto cost.</label>
    <type>Checkbox</type>
</CustomField>