force-app/main/default/objects/SalesforceWrtsActivity__x/fields/AttemptCountC__c.field-meta.xml
<CustomField>
    <fullName>AttemptCountC__c</fullName>
    <description>AttemptCountC</description>
    <externalDeveloperName>AttemptCountC</externalDeveloperName>
    <label>AttemptCountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>