force-app/main/default/objects/SalesforceWrtsActivity__x/fields/BPCodeC__c.field-meta.xml
<CustomField>
    <fullName>BPCodeC__c</fullName>
    <description>BPCodeC</description>
    <externalDeveloperName>BPCodeC</externalDeveloperName>
    <label>Codice BP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>