force-app/main/default/objects/SalesforceWrtsActivity__x/fields/CallCenterNumberC__c.field-meta.xml
<CustomField>
    <fullName>CallCenterNumberC__c</fullName>
    <description>CallCenterNumberC</description>
    <externalDeveloperName>CallCenterNumberC</externalDeveloperName>
    <label>CallCenterNumberC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>