force-app/main/default/objects/SalesforceWrtsActivity__x/fields/CallDurationC__c.field-meta.xml
<CustomField>
    <fullName>CallDurationC__c</fullName>
    <description>CallDurationC</description>
    <externalDeveloperName>CallDurationC</externalDeveloperName>
    <label>Durata Chiamata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>