force-app/main/default/objects/SalesforceWrtsActivity__x/fields/Cas_CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>Cas_CaseNumber__c</fullName>
    <description>Cas_CaseNumber</description>
    <externalDeveloperName>Cas_CaseNumber</externalDeveloperName>
    <label>Cas_CaseNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>