force-app/main/default/objects/SalesforceWrtsActivity__x/fields/CausalErrorC__c.field-meta.xml
<CustomField>
    <fullName>CausalErrorC__c</fullName>
    <description>CausalErrorC</description>
    <externalDeveloperName>CausalErrorC</externalDeveloperName>
    <label>Causale Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>