force-app/main/default/objects/SalesforceWrtsActivity__x/fields/CausalQualityComfortCallC__c.field-meta.xml
<CustomField>
    <fullName>CausalQualityComfortCallC__c</fullName>
    <description>CausalQualityComfortCallC</description>
    <externalDeveloperName>CausalQualityComfortCallC</externalDeveloperName>
    <label>Causale Quality/Comfort Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>