force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ClienteSalesforce__c.field-meta.xml
<CustomField>
    <fullName>ClienteSalesforce__c</fullName>
    <externalDeveloperName>AccountC</externalDeveloperName>
    <label>Cliente Salesforce</label>
    <length>18</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Attività Salesforce</relationshipLabel>
    <relationshipName>AttivitaSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>