force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ClientNumberC__c.field-meta.xml
<CustomField>
    <fullName>ClientNumberC__c</fullName>
    <description>ClientNumberC</description>
    <externalDeveloperName>ClientNumberC</externalDeveloperName>
    <label>Numero Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>