force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ClosingNoteC__c.field-meta.xml
<CustomField>
    <fullName>ClosingNoteC__c</fullName>
    <description>ClosingNoteC</description>
    <externalDeveloperName>ClosingNoteC</externalDeveloperName>
    <label>ClosingNoteC</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>