force-app/main/default/objects/SalesforceWrtsActivity__x/fields/CompanyOwnerC__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwnerC__c</fullName>
    <description>CompanyOwnerC</description>
    <externalDeveloperName>CompanyOwnerC</externalDeveloperName>
    <label>Company Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>