force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ContactC__c.field-meta.xml
<CustomField>
    <fullName>ContactC__c</fullName>
    <description>ContactC</description>
    <externalDeveloperName>ContactC</externalDeveloperName>
    <label>ContactC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>