force-app/main/default/objects/SalesforceWrtsActivity__x/fields/CreatedByUsernameC__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUsernameC__c</fullName>
    <description>CreatedByUsernameC</description>
    <externalDeveloperName>CreatedByUsernameC</externalDeveloperName>
    <label>Creazione di Utente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>