force-app/main/default/objects/SalesforceWrtsActivity__x/fields/DiscardDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>DiscardDescriptionC__c</fullName>
    <description>DiscardDescriptionC</description>
    <externalDeveloperName>DiscardDescriptionC</externalDeveloperName>
    <label>DiscardDescriptionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>