force-app/main/default/objects/SalesforceWrtsActivity__x/fields/DistributorC__c.field-meta.xml
<CustomField>
    <fullName>DistributorC__c</fullName>
    <description>DistributorC</description>
    <externalDeveloperName>DistributorC</externalDeveloperName>
    <label>Distributore</label>
    <length>18</length>
    <type>Text</type>
</CustomField>