force-app/main/default/objects/SalesforceWrtsActivity__x/fields/DueDateC__c.field-meta.xml
<CustomField>
    <fullName>DueDateC__c</fullName>
    <description>DueDateC</description>
    <externalDeveloperName>DueDateC</externalDeveloperName>
    <label>Data scadenza</label>
    <type>DateTime</type>
</CustomField>