force-app/main/default/objects/SalesforceWrtsActivity__x/fields/EffectiveDateC__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateC__c</fullName>
    <description>EffectiveDateC</description>
    <externalDeveloperName>EffectiveDateC</externalDeveloperName>
    <label>Data Decorrenza</label>
    <type>DateTime</type>
</CustomField>