force-app/main/default/objects/SalesforceWrtsActivity__x/fields/EmailC__c.field-meta.xml
<CustomField>
    <fullName>EmailC__c</fullName>
    <description>EmailC</description>
    <externalDeveloperName>EmailC</externalDeveloperName>
    <label>EmailC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>