force-app/main/default/objects/SalesforceWrtsActivity__x/fields/EndDateC__c.field-meta.xml
<CustomField>
    <fullName>EndDateC__c</fullName>
    <description>EndDateC</description>
    <externalDeveloperName>EndDateC</externalDeveloperName>
    <label>Data Completamento</label>
    <type>DateTime</type>
</CustomField>