force-app/main/default/objects/SalesforceWrtsActivity__x/fields/IdentityDocumentC__c.field-meta.xml
<CustomField>
    <fullName>IdentityDocumentC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IdentityDocumentC</description>
    <externalDeveloperName>IdentityDocumentC</externalDeveloperName>
    <label>Documento di Identità</label>
    <type>Checkbox</type>
</CustomField>