force-app/main/default/objects/SalesforceWrtsActivity__x/fields/IdSiebelActivityC__c.field-meta.xml
<CustomField>
    <fullName>IdSiebelActivityC__c</fullName>
    <description>IdSiebelActivityC</description>
    <externalDeveloperName>IdSiebelActivityC</externalDeveloperName>
    <label>ID Attività</label>
    <length>255</length>
    <type>Text</type>
</CustomField>