force-app/main/default/objects/SalesforceWrtsActivity__x/fields/InteractionC__c.field-meta.xml
<CustomField>
    <fullName>InteractionC__c</fullName>
    <description>InteractionC</description>
    <externalDeveloperName>InteractionC</externalDeveloperName>
    <label>InteractionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>