force-app/main/default/objects/SalesforceWrtsActivity__x/fields/IsAppointmentToEditC__c.field-meta.xml
<CustomField>
    <fullName>IsAppointmentToEditC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsAppointmentToEditC</description>
    <externalDeveloperName>IsAppointmentToEditC</externalDeveloperName>
    <label>Appuntamento da Modificare</label>
    <type>Checkbox</type>
</CustomField>