force-app/main/default/objects/SalesforceWrtsActivity__x/fields/IsApprovalRequiredC__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalRequiredC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsApprovalRequiredC</description>
    <externalDeveloperName>IsApprovalRequiredC</externalDeveloperName>
    <label>IsApprovalRequiredC</label>
    <type>Checkbox</type>
</CustomField>