force-app/main/default/objects/SalesforceWrtsActivity__x/fields/isSelfAppointmentC__c.field-meta.xml
<CustomField>
    <fullName>isSelfAppointmentC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isSelfAppointmentC</description>
    <externalDeveloperName>isSelfAppointmentC</externalDeveloperName>
    <label>isSelfAppointmentC</label>
    <type>Checkbox</type>
</CustomField>