force-app/main/default/objects/SalesforceWrtsActivity__x/fields/MailNotificationC__c.field-meta.xml
<CustomField>
    <fullName>MailNotificationC__c</fullName>
    <description>MailNotificationC</description>
    <externalDeveloperName>MailNotificationC</externalDeveloperName>
    <label>MailNotificationC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>