force-app/main/default/objects/SalesforceWrtsActivity__x/fields/MalfunctionDateC__c.field-meta.xml
<CustomField>
    <fullName>MalfunctionDateC__c</fullName>
    <description>MalfunctionDateC</description>
    <externalDeveloperName>MalfunctionDateC</externalDeveloperName>
    <label>Data Malfunzionamento</label>
    <type>DateTime</type>
</CustomField>