force-app/main/default/objects/SalesforceWrtsActivity__x/fields/NewEmailC__c.field-meta.xml
<CustomField>
    <fullName>NewEmailC__c</fullName>
    <description>NewEmailC</description>
    <externalDeveloperName>NewEmailC</externalDeveloperName>
    <label>Nuova E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>