force-app/main/default/objects/SalesforceWrtsActivity__x/fields/NoteC__c.field-meta.xml
<CustomField>
    <fullName>NoteC__c</fullName>
    <description>NoteC</description>
    <externalDeveloperName>NoteC</externalDeveloperName>
    <label>Note</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>