force-app/main/default/objects/SalesforceWrtsActivity__x/fields/OperatorChangeC__c.field-meta.xml
<CustomField>
    <fullName>OperatorChangeC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OperatorChangeC</description>
    <externalDeveloperName>OperatorChangeC</externalDeveloperName>
    <label>Cambio Operatore</label>
    <type>Checkbox</type>
</CustomField>