force-app/main/default/objects/SalesforceWrtsActivity__x/fields/OwnedByUserC__c.field-meta.xml
<CustomField>
    <fullName>OwnedByUserC__c</fullName>
    <description>OwnedByUserC</description>
    <externalDeveloperName>OwnedByUserC</externalDeveloperName>
    <label>Assegnata a Utente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>