force-app/main/default/objects/SalesforceWrtsActivity__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>OwnerId</description>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>