force-app/main/default/objects/SalesforceWrtsActivity__x/fields/Par_Name__c.field-meta.xml
<CustomField>
    <fullName>Par_Name__c</fullName>
    <description>Par_Name</description>
    <externalDeveloperName>Par_Name</externalDeveloperName>
    <label>Par_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>