force-app/main/default/objects/SalesforceWrtsActivity__x/fields/PlanStartDateC__c.field-meta.xml
<CustomField>
    <fullName>PlanStartDateC__c</fullName>
    <description>PlanStartDateC</description>
    <externalDeveloperName>PlanStartDateC</externalDeveloperName>
    <label>Inizio pianificato</label>
    <type>DateTime</type>
</CustomField>