force-app/main/default/objects/SalesforceWrtsActivity__x/fields/PraxidiaPostWorkActionC__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaPostWorkActionC__c</fullName>
    <description>PraxidiaPostWorkActionC</description>
    <externalDeveloperName>PraxidiaPostWorkActionC</externalDeveloperName>
    <label>Azione Post Lavorazione Praxidia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>