force-app/main/default/objects/SalesforceWrtsActivity__x/fields/PraxidiaPostWorkCauseC__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaPostWorkCauseC__c</fullName>
    <description>PraxidiaPostWorkCauseC</description>
    <externalDeveloperName>PraxidiaPostWorkCauseC</externalDeveloperName>
    <label>Causa Post Lavorazione Praxidia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>