force-app/main/default/objects/SalesforceWrtsActivity__x/fields/PraxidiaPostWorkOutcomeC__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaPostWorkOutcomeC__c</fullName>
    <description>PraxidiaPostWorkOutcomeC</description>
    <externalDeveloperName>PraxidiaPostWorkOutcomeC</externalDeveloperName>
    <label>PraxidiaPostWorkOutcomeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>