force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ProcessC__c.field-meta.xml
<CustomField>
    <fullName>ProcessC__c</fullName>
    <description>ProcessC</description>
    <externalDeveloperName>ProcessC</externalDeveloperName>
    <label>Processo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>