force-app/main/default/objects/SalesforceWrtsActivity__x/fields/QAdLoginC__c.field-meta.xml
<CustomField>
    <fullName>QAdLoginC__c</fullName>
    <description>QAdLoginC</description>
    <externalDeveloperName>QAdLoginC</externalDeveloperName>
    <label>Login QAd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>