force-app/main/default/objects/SalesforceWrtsActivity__x/fields/QAdMethodC__c.field-meta.xml
<CustomField>
    <fullName>QAdMethodC__c</fullName>
    <description>QAdMethodC</description>
    <externalDeveloperName>QAdMethodC</externalDeveloperName>
    <label>QAdMethodC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>