force-app/main/default/objects/SalesforceWrtsActivity__x/fields/QAdOfficeIDC__c.field-meta.xml
<CustomField>
    <fullName>QAdOfficeIDC__c</fullName>
    <description>QAdOfficeIDC</description>
    <externalDeveloperName>QAdOfficeIDC</externalDeveloperName>
    <label>QAdOfficeIDC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>