force-app/main/default/objects/SalesforceWrtsActivity__x/fields/QAdTicketBookingTimeC__c.field-meta.xml
<CustomField>
    <fullName>QAdTicketBookingTimeC__c</fullName>
    <description>QAdTicketBookingTimeC</description>
    <externalDeveloperName>QAdTicketBookingTimeC</externalDeveloperName>
    <label>QAdTicketBookingTimeC</label>
    <type>DateTime</type>
</CustomField>