force-app/main/default/objects/SalesforceWrtsActivity__x/fields/QAdTicketCallTimeC__c.field-meta.xml
<CustomField>
    <fullName>QAdTicketCallTimeC__c</fullName>
    <description>QAdTicketCallTimeC</description>
    <externalDeveloperName>QAdTicketCallTimeC</externalDeveloperName>
    <label>QAdTicketCallTimeC</label>
    <type>DateTime</type>
</CustomField>