force-app/main/default/objects/SalesforceWrtsActivity__x/fields/QAdWorkstationIDC__c.field-meta.xml
<CustomField>
    <fullName>QAdWorkstationIDC__c</fullName>
    <description>QAdWorkstationIDC</description>
    <externalDeveloperName>QAdWorkstationIDC</externalDeveloperName>
    <label>QAdWorkstationIDC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>