force-app/main/default/objects/SalesforceWrtsActivity__x/fields/Quot_Name__c.field-meta.xml
<CustomField>
    <fullName>Quot_Name__c</fullName>
    <description>Quot_Name</description>
    <externalDeveloperName>Quot_Name</externalDeveloperName>
    <label>Quot_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>