force-app/main/default/objects/SalesforceWrtsActivity__x/fields/RequestedCancellationDateC__c.field-meta.xml
<CustomField>
    <fullName>RequestedCancellationDateC__c</fullName>
    <description>RequestedCancellationDateC</description>
    <externalDeveloperName>RequestedCancellationDateC</externalDeveloperName>
    <label>Data annullamento richiesta</label>
    <type>DateTime</type>
</CustomField>