force-app/main/default/objects/SalesforceWrtsActivity__x/fields/SaleC__c.field-meta.xml
<CustomField>
    <fullName>SaleC__c</fullName>
    <description>SaleC</description>
    <externalDeveloperName>SaleC</externalDeveloperName>
    <label>Vendita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>