force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ServiceC__c.field-meta.xml
<CustomField>
    <fullName>ServiceC__c</fullName>
    <description>ServiceC</description>
    <externalDeveloperName>ServiceC</externalDeveloperName>
    <label>Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>