force-app/main/default/objects/SalesforceWrtsActivity__x/fields/ServicePointC__c.field-meta.xml
<CustomField>
    <fullName>ServicePointC__c</fullName>
    <description>ServicePointC</description>
    <externalDeveloperName>ServicePointC</externalDeveloperName>
    <label>POD/PDR</label>
    <length>18</length>
    <type>Text</type>
</CustomField>