force-app/main/default/objects/SalesforceWrtsActivity__x/fields/SolicitedC__c.field-meta.xml
<CustomField>
    <fullName>SolicitedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SolicitedC</description>
    <externalDeveloperName>SolicitedC</externalDeveloperName>
    <label>Attività Sollecitata</label>
    <type>Checkbox</type>
</CustomField>