force-app/main/default/objects/SalesforceWrtsActivity__x/fields/SotCodeC__c.field-meta.xml
<CustomField>
    <fullName>SotCodeC__c</fullName>
    <description>SotCodeC</description>
    <externalDeveloperName>SotCodeC</externalDeveloperName>
    <label>Codice Sot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>