force-app/main/default/objects/SalesforceWrtsActivity__x/fields/StartAppointmentC__c.field-meta.xml
<CustomField>
    <fullName>StartAppointmentC__c</fullName>
    <description>StartAppointmentC</description>
    <externalDeveloperName>StartAppointmentC</externalDeveloperName>
    <label>Inizio Appuntamento</label>
    <type>DateTime</type>
</CustomField>