force-app/main/default/objects/SalesforceWrtsActivity__x/fields/URLC__c.field-meta.xml
<CustomField>
    <fullName>URLC__c</fullName>
    <description>URLC</description>
    <externalDeveloperName>URLC</externalDeveloperName>
    <label>Link Appuntamento Self</label>
    <length>255</length>
    <type>Text</type>
</CustomField>