force-app/main/default/objects/SalesforceWrtsActivity__x/fields/wrts_prcgvr_IsClosedC__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr_IsClosedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wrts_prcgvr_IsClosedC</description>
    <externalDeveloperName>wrts_prcgvr_IsClosedC</externalDeveloperName>
    <label>wrts_prcgvr_IsClosedC</label>
    <type>Checkbox</type>
</CustomField>