force-app/main/default/objects/SalesforceWrtsActivity__x/fields/wrts_prcgvr_ObjectIdC__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr_ObjectIdC__c</fullName>
    <description>wrts_prcgvr_ObjectIdC</description>
    <externalDeveloperName>wrts_prcgvr_ObjectIdC</externalDeveloperName>
    <label>wrts_prcgvr_ObjectIdC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>