force-app/main/default/objects/SalesforceWrtsActivity__x/fields/wrts_prcgvr_PriorityC__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr_PriorityC__c</fullName>
    <description>wrts_prcgvr_PriorityC</description>
    <externalDeveloperName>wrts_prcgvr_PriorityC</externalDeveloperName>
    <label>wrts_prcgvr_PriorityC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>