force-app/main/default/objects/SalesforceWrtsActivity__x/fields/wrts_prcgvr_StatusC__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr_StatusC__c</fullName>
    <description>wrts_prcgvr_StatusC</description>
    <externalDeveloperName>wrts_prcgvr_StatusC</externalDeveloperName>
    <label>wrts_prcgvr_StatusC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>